--- a/config/anyrun/style.css
+++ b/config/anyrun/style.css
@@ -1,6 +1,6 @@
 * {
         transition: 200ms ease;
-        font-family: Lexend;
+        font-family: GeistMono;
         font-size: 1.3rem;
       }
 
